--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h2>經驗與實習</h2>
         <ul>
           <li>曾於 <strong>McDonald's</strong> 擔任炸薯條與油炸區清潔工作</li>
-          <li>曾於 <strong>7-ELEVEN</strong> 擔任清潔、搬運、商品補貨、烹煮食物與POS機操作</li>
+          <li>曾於 <strong>7-ELEVEN</strong> 擔任清潔、搬運、商品補貨、烹煮食物與掃條碼</li>
         </ul>
       </section>
 
