--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container py-5">
       <header class="mb-5">
         <div class="profile-header">
-          <img src="images/profile.jpg" alt="我的照片">
+          <img src="profile.jpg" alt="我的照片">
           <div>
             <h1 class="text-start">沈嘉宏</h1>
             <p class="lead text-start">國立聯合大學 資訊管理學系</p>
